<resources>
    <string name="app_name">Calculator</string>
    <string name="unknownButton">2nd</string>
    <string name="radButton">rad</string>
    <string name="sinButton">sin</string>
    <string name="cosButton">cos</string>
    <string name="tanButton">tan</string>
    <string name="powButton">pow</string>
    <string name="lgButton">lg</string>
    <string name="lnButton">ln</string>
    <string name="openBracketButton">(</string>
    <string name="closeBracketButton">)</string>
    <string name="sqrtButton">sqrt</string>
    <string name="clearButton">C</string>
    <string name="deleteButton">rm</string>
    <string name="percentButton">%</string>
    <string name="divideButton">/</string>
    <string name="factorialButton">X!</string>
    <string name="n7Button">7</string>
    <string name="n8Button">8</string>
    <string name="n9Button">9</string>
    <string name="multiplyButton">x</string>
    <string name="reverseButton">1/x</string>
    <string name="n4Button">4</string>
    <string name="n5Button">5</string>
    <string name="n6Button">6</string>
    <string name="piButton">pi</string>
    <string name="subtractButton">-</string>
    <string name="n1Button">1</string>
    <string name="n2Button">2</string>
    <string name="n3Button">3</string>
    <string name="addButton">+</string>
    <string name="moreOrLessButton">$</string>
    <string name="eButton">e</string>
    <string name="n0Button">0</string>
    <string name="floatButton">.</string>
    <string name="equalsButton">=</string>
    <string name="errorMessage">Error</string>
</resources>